fixed selector and horizontal scrollbar

--- a/src/css/pages/_domains.scss
+++ b/src/css/pages/_domains.scss
@@ -69,7 +69,9 @@
   .jstree-anchor.jstree-clicked {background-color:#cfe1f2 !important;}
   .jstree-default>.jstree-no-dots .jstree-leaf>.jstree-ocl { display: none;}
 
-  .jstree-container-ul .jstree-anchor {width: 100%;}
+  .jstree-container-ul .jstree-anchor {width: 90%;}
+  .jstree-container-ul .jstree-children .jstree-anchor {width: 210px; padding-right: 0px;}
+  .jstree-container-ul ul.jstree-children ul.jstree-children .jstree-anchor {width: 185px; padding-right: 0px;}
 
   .panel.panel-default {background-color: white; transition: box-shadow .25s; -webkit-border-radius: 2px; -moz-border-radius: 2px; -ms-border-radius: 2px; border-radius: 2px; box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12); border-color: transparent;
     border: 0;}
@@ -93,7 +95,7 @@
   .panel-border .panel-body .form-group .help-block {display: none;}
   .panel-border .panel-body .active .form-group .filter-radio-list {padding-left: 10px; padding-bottom: 6px; margin-bottom: 0px; border-bottom: 1px solid #eaeaea; margin-top: 5px;}
   .panel-border .panel-body .active .clearfix {display: none;}
-  .panel-border .panel-body .active .selector-footer {display: block; max-height: 115px; overflow-y: auto;}
+  .panel-border .panel-body .active .selector-footer {display: block; max-height: 115px; overflow-y: auto; margin-top: 10px;}
 
   .panel-border .panel-body .active .selector-footer ul div span.code-brk:after {content: ''; height: 15px; width: 15px; background: url(http://www.fao.org/faostat/en/submodules/fenix-ui-common/css/img/fenix-catalog-sprite-small.svg) no-repeat 0 -15px;
     background-size: 150px 30px; display: inline-block; position: relative; top: 3px;}
@@ -256,7 +258,6 @@
 
     &:hover, &:active, &:focus{
       text-decoration: none;
-
     }
 
 
